log/build_2024-02-18_10-55-55/vision/stderr.log
  File "/home/olel/Projects/FPMagangBayu24/install/vision/lib/python3.8/site-packages/vision/visioner.py", line 43
    break
    ^
SyntaxError: 'break' outside loop

